# mongo_obj_doc_mapper

./: .gitmodules  LICENSE  README.md
generator/: codegen.py  mongoodm.xsd  sample.xml
mongoodm/: client.cpp  client.h  client_pool.cpp  client_pool.h  collection.cpp  collection.h  database.cpp  database.h  debug.h  document.cpp  document.h  field.cpp  field.h  mongoodm.h  mongoodm_all.cpp  utility.h  value.cpp  value.h
mongoodm/detail/: collection_impl.h  value_impl.h
sample/: CMakeLists.txt  account.cpp  account.h  account_clothes_member.cpp  account_clothes_member.h  account_name.cpp  account_name.h  color.cpp  color.h  sample.cpp
